# flashqda

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
docs/: Lojka et al. 2016.txt  Ocampo-Ariza et al. 2023.rtf  Ocampo-Ariza et al. 2023.txt  QUICK_START.md  QuickStart Guide.ipynb  abstracts.csv  troubleshooting.md
src/flashqda/: __init__.py  causal_chain.py  cost_estimation.py  document_io.py  embedding_pipeline.py  llm_utils.py  log_utils.py  pipeline_runner.py  preprocess.py  project_context.py  project_setup.py  prompt_loader.py  text_utils.py
src/flashqda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/flashqda/embeddings/: cache.py  provider.py
src/flashqda/grouping/: clusterer.py  labeller.py  mapper.py  pipeline.py  utils.py
src/flashqda/pipelines/: config.py  default_configs.py  validation.py
src/flashqda/prompts/: causal_classify.txt  causal_extract.txt  causal_refine_extract.txt  label_abstract.txt  label_abstract_reasoning.md  label_cluster.txt  label_cluster_tradeoff.txt  label_extracted.txt  label_extracted_reasoning.md  label_sent_para.txt  label_sent_para_reasoning.md  synergy_classify.txt  synergy_extract.txt  synergy_refine_extract.txt  thematic_extract.txt  thematic_refine_extract.txt  tradeoff_classify.txt  tradeoff_extract.txt  tradeoff_refine_extract.txt
src/flashqda/prompts/local/: causal_classify.txt  causal_extract.txt  causal_refine_extract.txt  label_cluster.txt  (+10 more)
tests/: test_cache.py  test_config.py  test_cost_estimation.py  test_imports.py  test_preprocessing.py  test_prompt_loader.py  test_public_api.py
