[project]
name = "flashqda"
version = "1.2.2"
authors = [
    { name = "Norman Kearney", email = "norman.kearney@protonmail.com"},
]
description = "A package for using Large Language Models for qualitative data analysis."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "tqdm",
    "openai",
    "pandas",
    "numpy>=1.21",
    "nltk",
    "pysbd>=0.3.4",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "sentence-transformers>=3.0",
    "accelerate>=1.0",
]

[project.optional-dependencies]
grouping = [
    "scipy",
    "scikit-learn",
    "matplotlib",
    "sentence-transformers>=3.0",
]
anthropic = [
    "anthropic",
]
preprocessing = [
    "pymupdf",
    "python-docx",
]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/nmkearney/flashqda"
Issues = "https://github.com/nmkearney/flashqda/issues"

[tool.setuptools.package-data]
flashqda = ["prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
